Fix: white space at the bottom of page on smaller screens

--- a/main.css
+++ b/main.css
@@ -11,6 +11,8 @@ body{
  background-image: url('/Assets/Images/Clear.gif');
  background-size: cover;
  background-repeat: no-repeat;
+ height: 100vh;
+ width: 100vw;
 }
 /* styles the header content*/
 header{
@@ -207,6 +209,6 @@ bottom: 0px;
 width: 100vw;
 }
 
-
+/*Media Queries*/
 
 
